feat: Store options to Cookie

--- a/index.html
+++ b/index.html
@@ -8,29 +8,29 @@
     <header></header>
     <article></article>
     <footer>
-        <ul>
-            <li><input type="checkbox" id="option_colorSide" checked> <label for="option_colorSide">colored side</label></li>
-            <li><input type="checkbox" id="option_U-perm:b" checked> <label for="option_U-perm:b">U-perm:b</label></li>
-            <li><input type="checkbox" id="option_U-perm:a" checked> <label for="option_U-perm:a">U-perm:a</label></li>
-            <li><input type="checkbox" id="option_A-perm:b" checked> <label for="option_A-perm:b">A-perm:b</label></li>
-            <li><input type="checkbox" id="option_A-perm:a" checked> <label for="option_A-perm:a">A-perm:a</label></li>
-            <li><input type="checkbox" id="option_Z-perm" checked> <label for="option_Z-perm">Z-perm</label></li>
-            <li><input type="checkbox" id="option_H-perm" checked> <label for="option_H-perm">H-perm</label></li>
-            <li><input type="checkbox" id="option_E-perm" checked> <label for="option_E-perm">E-perm</label></li>
-            <li><input type="checkbox" id="option_T-perm" checked> <label for="option_T-perm">T-perm</label></li>
-            <li><input type="checkbox" id="option_V-perm" checked> <label for="option_V-perm">V-perm</label></li>
-            <li><input type="checkbox" id="option_F-perm" checked> <label for="option_F-perm">F-perm</label></li>
-            <li><input type="checkbox" id="option_R-perm:b" checked> <label for="option_R-perm:b">R-perm:b</label></li>
-            <li><input type="checkbox" id="option_R-perm:a" checked> <label for="option_R-perm:a">R-perm:a</label></li>
-            <li><input type="checkbox" id="option_J-perm:b" checked> <label for="option_J-perm:b">J-perm:b</label></li>
-            <li><input type="checkbox" id="option_J-perm:a" checked> <label for="option_J-perm:a">J-perm:a</label></li>
-            <li><input type="checkbox" id="option_Y-perm" checked> <label for="option_Y-perm">Y-perm</label></li>
-            <li><input type="checkbox" id="option_G-perm:d" checked> <label for="option_G-perm:d">G-perm:d</label></li>
-            <li><input type="checkbox" id="option_G-perm:c" checked> <label for="option_G-perm:c">G-perm:c</label></li>
-            <li><input type="checkbox" id="option_G-perm:a" checked> <label for="option_G-perm:a">G-perm:a</label></li>
-            <li><input type="checkbox" id="option_G-perm:b" checked> <label for="option_G-perm:b">G-perm:b</label></li>
-            <li><input type="checkbox" id="option_N-perm:b" checked> <label for="option_N-perm:b">N-perm:b</label></li>
-            <li><input type="checkbox" id="option_N-perm:a" checked> <label for="option_N-perm:a">N-perm:a</label></li>
+        <ul id="optionList">
+            <li><input type="checkbox" id="option_colorSide" value="true" checked> <label for="option_colorSide">colored side</label></li>
+            <li><input type="checkbox" id="option_U-perm:b" value="true" checked> <label for="option_U-perm:b">U-perm:b</label></li>
+            <li><input type="checkbox" id="option_U-perm:a" value="true" checked> <label for="option_U-perm:a">U-perm:a</label></li>
+            <li><input type="checkbox" id="option_A-perm:b" value="true" checked> <label for="option_A-perm:b">A-perm:b</label></li>
+            <li><input type="checkbox" id="option_A-perm:a" value="true" checked> <label for="option_A-perm:a">A-perm:a</label></li>
+            <li><input type="checkbox" id="option_Z-perm" value="true" checked> <label for="option_Z-perm">Z-perm</label></li>
+            <li><input type="checkbox" id="option_H-perm" value="true" checked> <label for="option_H-perm">H-perm</label></li>
+            <li><input type="checkbox" id="option_E-perm" value="true" checked> <label for="option_E-perm">E-perm</label></li>
+            <li><input type="checkbox" id="option_T-perm" value="true" checked> <label for="option_T-perm">T-perm</label></li>
+            <li><input type="checkbox" id="option_V-perm" value="true" checked> <label for="option_V-perm">V-perm</label></li>
+            <li><input type="checkbox" id="option_F-perm" value="true" checked> <label for="option_F-perm">F-perm</label></li>
+            <li><input type="checkbox" id="option_R-perm:b" value="true" checked> <label for="option_R-perm:b">R-perm:b</label></li>
+            <li><input type="checkbox" id="option_R-perm:a" value="true" checked> <label for="option_R-perm:a">R-perm:a</label></li>
+            <li><input type="checkbox" id="option_J-perm:b" value="true" checked> <label for="option_J-perm:b">J-perm:b</label></li>
+            <li><input type="checkbox" id="option_J-perm:a" value="true" checked> <label for="option_J-perm:a">J-perm:a</label></li>
+            <li><input type="checkbox" id="option_Y-perm" value="true" checked> <label for="option_Y-perm">Y-perm</label></li>
+            <li><input type="checkbox" id="option_G-perm:d" value="true" checked> <label for="option_G-perm:d">G-perm:d</label></li>
+            <li><input type="checkbox" id="option_G-perm:c" value="true" checked> <label for="option_G-perm:c">G-perm:c</label></li>
+            <li><input type="checkbox" id="option_G-perm:a" value="true" checked> <label for="option_G-perm:a">G-perm:a</label></li>
+            <li><input type="checkbox" id="option_G-perm:b" value="true" checked> <label for="option_G-perm:b">G-perm:b</label></li>
+            <li><input type="checkbox" id="option_N-perm:b" value="true" checked> <label for="option_N-perm:b">N-perm:b</label></li>
+            <li><input type="checkbox" id="option_N-perm:a" value="true" checked> <label for="option_N-perm:a">N-perm:a</label></li>
         </ul>
     </footer>
     <script src="./index.js"></script>
