--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
     <title>flashcube // PLL</title>
     <link rel="stylesheet" type="text/css" href="./default.css">
+    <link rel="icon" type="image/vnd.microsoft.icon" href="/img/favicons/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicons/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/img/favicons/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/img/favicons/icon-512x512.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicons/icon-16x16.png">
+    <link rel="icon" type="image/png" sizes="24x24" href="/img/favicons/icon-24x24.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicons/icon-32x32.png">
 </head>
 <body>
     <header></header>
