update: Load scripts deffered

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>flashcube // PLL</title>
     <link rel="stylesheet" type="text/css" href="./default.css">
     <link rel="icon" type="image/vnd.microsoft.icon" href="/img/favicons/favicon.ico">
@@ -10,6 +12,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicons/icon-16x16.png">
     <link rel="icon" type="image/png" sizes="24x24" href="/img/favicons/icon-24x24.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicons/icon-32x32.png">
+    <script defer src="./index.js"></script>
 </head>
 <body>
     <header></header>
@@ -40,6 +43,5 @@
             <li><input type="checkbox" id="option_N-perm:a" value="true" checked> <label for="option_N-perm:a">N-perm:a</label></li>
         </ul>
     </footer>
-    <script src="./index.js"></script>
 </body>
 </html>
