feat: Add `Check all` button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <header></header>
     <article></article>
     <footer>
+        <p><button id="btn_checkAll" type="button">check all</button></p>
         <ul id="optionList">
             <li><input type="checkbox" id="option_colorSide" value="true" checked> <label for="option_colorSide">colored side</label></li>
             <li><input type="checkbox" id="option_U-perm:b" value="true" checked> <label for="option_U-perm:b">U-perm:b</label></li>
